Updates deps and and adds more JDK versions in CI (#437)
* Updates lombok and mockito to ideally get tests passing on modern JDKs

* Refactor build and lint steps into yaml mixins

* Adds multiple jdk versions up to and including latest

* Uses latest available circle-ci convenience images

* Updates AttachAPI usage to be compatible with newer JVMs

* Utilizes reflection to invoke newer startLocalManagementAgent method

* Adds openjdk ticket refs and fixes linting errors